--- a/design.css
+++ b/design.css
@@ -1,13 +1,20 @@
 body {
     font-family: Arial;
+    background-color: gray;
 }
 button {
     background-color: black;
-    color: white;
+    color: rgb(196, 234, 108);
     border: none;
-    padding: 0.75rem 1.5rem;
-    border-radius: 5px;
-    font-size: 2rem;
+    padding: 1rem 3rem;
+    border-radius: 10px;
+    font-size: 3rem;
     font-weight: 600;
     cursor: pointer;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
