--- a/design.css
+++ b/design.css
@@ -38,3 +38,12 @@ button {
     font-size: 2.5rem;
     text-shadow: 3px 3px 5px gray;
 }
+#result {
+    height: 2rem;
+    font-weight: bold;
+    font-size: 1.25rem;
+    width: 80%;
+    box-shadow: 0 0 5px black;
+    padding: 1rem;
+    border-radius: 5px;
+}
