--- a/design.css
+++ b/design.css
@@ -1,10 +1,10 @@
 body {
-    font-family: Arial;
-    background-color: gray;
+    font-family: Tahoma;
+    background-color: #EDF2F3;
 }
 button {
-    background-color: black;
-    color: rgb(196, 234, 108);
+    background-color: #1F3541;
+    color: #EDF2F3;
     border: none;
     padding: 1rem 3rem;
     border-radius: 10px;
@@ -29,21 +29,24 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 0 2rem black;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: #5289B5;
     padding: 1rem;
     border-radius: 1rem;
 }   
 .name {
-    font-size: 2.5rem;
-    text-shadow: 3px 3px 5px gray;
+    font-size: 5rem;
+    text-shadow: 3px 3px 5px #5289B5;
+    margin: 1rem 0;
+    color: #1F3541;
 }
 #result {
     height: 2rem;
     font-weight: bold;
     font-size: 1.25rem;
     width: 80%;
-    box-shadow: 0 0 5px black;
-    padding: 1rem;
+    padding-left: 1rem;
     border-radius: 5px;
+    color: #1F3541;
+    border: 4px solid #1F3541;
+    border-radius: 1rem;
 }
